// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Facets:  When 'showFixedFacets' is true should render the filter button to match the snapshot 1`] = `
<DocumentFragment>
  .c0 {
  min-width: 0;
  position: relative;
  display: none;
}

.c1 {
  z-index: 1;
  margin-left: 1rem;
  width: calc(100% - 2rem);
  height: 100%;
}

.c2 {
  background: #ffffff;
  border-bottom: 0.0625rem solid #d1d1d1;
  min-height: 3.75rem;
  margin-bottom: 0.75rem;
  max-width: 13.400625rem;
  padding-top: 1.175rem;
  padding-bottom: 1rem;
  -webkit-transform: translateY(-0.75rem);
  -ms-transform: translateY(-0.75rem);
  transform: translateY(-0.75rem);
  z-index: 1;
  margin-top: 10px;
  position: absolute;
  width: 100%;
}

.c6 {
  background: #ffffff;
  max-width: 13.400625rem;
  visibility: unset;
  padding-top: 25px;
  position: fixed;
  width: calc(20% - 2.5rem);
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
}

.c4 {
  white-space: nowrap;
}

.c5 {
  color: #257f39;
  background: none;
  border: none;
  padding: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: "AzoSansMedium","Helvetica Neue",Arial,sans-serif;
  line-height: 1.2;
  -webkit-letter-spacing: 0.008rem;
  -moz-letter-spacing: 0.008rem;
  -ms-letter-spacing: 0.008rem;
  letter-spacing: 0.008rem;
  cursor: pointer;
  margin-left: 1rem;
  text-align: right;
  margin-top: 0.25rem;
}

[dir="rtl"] .c5 {
  margin-left: 0;
  margin-right: 1rem;
  text-align: left;
}

.c5:hover {
  background: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

@media (min-width:1024px) {
  .c0 {
    display: inherit;
    -webkit-flex: 1 0 25%;
    -ms-flex: 1 0 25%;
    flex: 1 0 25%;
  }
}

@media (min-width:1024px) {
  .c0 {
    -webkit-flex: 1 0 25%;
    -ms-flex: 1 0 25%;
    flex: 1 0 25%;
  }
}

@media (min-width:1280px) {
  .c0 {
    -webkit-flex: 1 0 20%;
    -ms-flex: 1 0 20%;
    flex: 1 0 20%;
  }
}

@media (min-width:1024px) {
  .c2 {
    width: calc(100% - 2rem);
  }
}

@media (min-width:1024px) {
  .c2 {
    width: 100%;
  }
}

@media (min-width:1280px) {
  .c2 {
    width: calc(100% - 2rem);
  }
}

@media (min-width:1024px) {
  .c6 {
    width: calc(75% - 2.5rem);
  }
}

@media (min-width:1024px) {
  .c6 {
    width: calc(25% - 2.5rem);
  }
}

@media (min-width:1280px) {
  .c6 {
    width: calc(20% - 2.5rem);
  }
}

<div
    class="MuiBox-root MuiBox-root-7 c0"
  >
    <div
      class="c1"
      data-testid="plp-facets"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <h2
            class="MuiTypography-root c4 MuiTypography-h3"
            data-testid="plp-total-products"
            role="status"
          >
            9999 Products
          </h2>
          <button
            aria-label="Clear All"
            class="c5"
            data-testid="plp-filter-clear-all-link"
          >
            Clear All
          </button>
        </div>
      </div>
      <div
        class="c6"
        data-testid="plp-facet-items"
      >
        <div>
          TEST FACETS FEATS
        </div>
        <div>
          TEST FACETS FILTERS
        </div>
        <div>
          TEST FACETS FILTERS
        </div>
      </div>
      <div
        style="height: 0px;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Facets:  When all filters are supplied should match the snapshot 1`] = `
<DocumentFragment>
  .c0 {
  min-width: 0;
  position: relative;
  display: none;
}

.c1 {
  z-index: 1;
  margin-left: 1rem;
  width: calc(100% - 2rem);
  height: 100%;
}

.c2 {
  background: #ffffff;
  border-bottom: 0.0625rem solid #d1d1d1;
  min-height: 3.75rem;
  margin-bottom: 0.75rem;
  max-width: 13.400625rem;
  padding-top: 1.175rem;
  padding-bottom: 1rem;
  -webkit-transform: translateY(-0.75rem);
  -ms-transform: translateY(-0.75rem);
  transform: translateY(-0.75rem);
  z-index: 1;
  margin-top: 10px;
  position: absolute;
  width: 100%;
}

.c6 {
  background: #ffffff;
  max-width: 13.400625rem;
  visibility: unset;
  padding-top: 20px;
  position: relative;
  width: 100%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
}

.c4 {
  white-space: nowrap;
}

.c5 {
  color: #257f39;
  background: none;
  border: none;
  padding: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: "AzoSansMedium","Helvetica Neue",Arial,sans-serif;
  line-height: 1.2;
  -webkit-letter-spacing: 0.008rem;
  -moz-letter-spacing: 0.008rem;
  -ms-letter-spacing: 0.008rem;
  letter-spacing: 0.008rem;
  cursor: pointer;
  margin-left: 1rem;
  text-align: right;
  margin-top: 0.25rem;
}

[dir="rtl"] .c5 {
  margin-left: 0;
  margin-right: 1rem;
  text-align: left;
}

.c5:hover {
  background: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

@media (min-width:1024px) {
  .c0 {
    display: inherit;
    -webkit-flex: 1 0 25%;
    -ms-flex: 1 0 25%;
    flex: 1 0 25%;
  }
}

@media (min-width:1024px) {
  .c0 {
    -webkit-flex: 1 0 25%;
    -ms-flex: 1 0 25%;
    flex: 1 0 25%;
  }
}

@media (min-width:1280px) {
  .c0 {
    -webkit-flex: 1 0 20%;
    -ms-flex: 1 0 20%;
    flex: 1 0 20%;
  }
}

@media (min-width:1024px) {
  .c2 {
    width: calc(100% - 2rem);
  }
}

@media (min-width:1024px) {
  .c2 {
    width: 100%;
  }
}

@media (min-width:1280px) {
  .c2 {
    width: calc(100% - 2rem);
  }
}

@media (min-width:1024px) {
  .c6 {
    width: 100%;
  }
}

@media (min-width:1024px) {
  .c6 {
    width: 100%;
  }
}

@media (min-width:1280px) {
  .c6 {
    width: 100%;
  }
}

<div
    class="MuiBox-root MuiBox-root-4 c0"
  >
    <div
      class="c1"
      data-testid="plp-facets"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <h2
            class="MuiTypography-root c4 MuiTypography-h3"
            data-testid="plp-total-products"
            role="status"
          >
            9999 Products
          </h2>
          <button
            aria-label="Clear All"
            class="c5"
            data-testid="plp-filter-clear-all-link"
          >
            Clear All
          </button>
        </div>
      </div>
      <div
        class="c6"
        data-testid="plp-facet-items"
      >
        <div>
          TEST FACETS FEATS
        </div>
        <div>
          TEST FACETS FILTERS
        </div>
        <div>
          TEST FACETS FILTERS
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Facets:  When has reached footer should match the snapshot 1`] = `
<DocumentFragment>
  .c0 {
  min-width: 0;
  position: relative;
  display: none;
}

.c1 {
  z-index: 1;
  margin-left: 1rem;
  width: calc(100% - 2rem);
  height: 100%;
}

.c2 {
  background: #ffffff;
  border-bottom: 0.0625rem solid #d1d1d1;
  min-height: 3.75rem;
  margin-bottom: 0.75rem;
  max-width: 13.400625rem;
  padding-top: 1.175rem;
  padding-bottom: 1rem;
  -webkit-transform: translateY(-0.75rem);
  -ms-transform: translateY(-0.75rem);
  transform: translateY(-0.75rem);
  z-index: 1;
  margin-top: 10px;
  position: absolute;
  width: 100%;
}

.c6 {
  background: #ffffff;
  max-width: 13.400625rem;
  padding-top: 20px;
  position: relative;
  width: 100%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
}

.c4 {
  white-space: nowrap;
}

.c5 {
  color: #257f39;
  background: none;
  border: none;
  padding: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: "AzoSansMedium","Helvetica Neue",Arial,sans-serif;
  line-height: 1.2;
  -webkit-letter-spacing: 0.008rem;
  -moz-letter-spacing: 0.008rem;
  -ms-letter-spacing: 0.008rem;
  letter-spacing: 0.008rem;
  cursor: pointer;
  margin-left: 1rem;
  text-align: right;
  margin-top: 0.25rem;
}

[dir="rtl"] .c5 {
  margin-left: 0;
  margin-right: 1rem;
  text-align: left;
}

.c5:hover {
  background: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

@media (min-width:1024px) {
  .c0 {
    display: inherit;
    -webkit-flex: 1 0 25%;
    -ms-flex: 1 0 25%;
    flex: 1 0 25%;
  }
}

@media (min-width:1024px) {
  .c0 {
    -webkit-flex: 1 0 25%;
    -ms-flex: 1 0 25%;
    flex: 1 0 25%;
  }
}

@media (min-width:1280px) {
  .c0 {
    -webkit-flex: 1 0 20%;
    -ms-flex: 1 0 20%;
    flex: 1 0 20%;
  }
}

@media (min-width:1024px) {
  .c2 {
    width: calc(100% - 2rem);
  }
}

@media (min-width:1024px) {
  .c2 {
    width: 100%;
  }
}

@media (min-width:1280px) {
  .c2 {
    width: calc(100% - 2rem);
  }
}

<div
    class="MuiBox-root MuiBox-root-1 c0"
  >
    <div
      class="c1"
      data-testid="plp-facets"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <h2
            class="MuiTypography-root c4 MuiTypography-h3"
            data-testid="plp-total-products"
            role="status"
          >
            9999 Products
          </h2>
          <button
            aria-label="Clear All"
            class="c5"
            data-testid="plp-filter-clear-all-link"
          >
            Clear All
          </button>
        </div>
      </div>
      <div
        class="c6"
        data-testid="plp-facet-items"
      >
        <div>
          TEST FACETS FEATS
        </div>
        <div>
          TEST FACETS FILTERS
        </div>
        <div>
          TEST FACETS FILTERS
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Facets:  When isFilterSelected is not passed in the props should match the snapshot 1`] = `
<DocumentFragment>
  .c0 {
  min-width: 0;
  position: relative;
  display: none;
}

.c1 {
  z-index: 1;
  margin-left: 1rem;
  width: calc(100% - 2rem);
  height: 100%;
}

.c2 {
  background: #ffffff;
  border-bottom: 0.0625rem solid #d1d1d1;
  min-height: 3.75rem;
  margin-bottom: 0.75rem;
  max-width: 13.400625rem;
  padding-top: 1.175rem;
  padding-bottom: 1rem;
  -webkit-transform: translateY(-0.75rem);
  -ms-transform: translateY(-0.75rem);
  transform: translateY(-0.75rem);
  z-index: 1;
  margin-top: 10px;
  position: absolute;
  width: 100%;
}

.c5 {
  background: #ffffff;
  max-width: 13.400625rem;
  visibility: unset;
  padding-top: 20px;
  position: relative;
  width: 100%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
}

.c4 {
  white-space: nowrap;
}

@media (min-width:1024px) {
  .c0 {
    display: inherit;
    -webkit-flex: 1 0 25%;
    -ms-flex: 1 0 25%;
    flex: 1 0 25%;
  }
}

@media (min-width:1024px) {
  .c0 {
    -webkit-flex: 1 0 25%;
    -ms-flex: 1 0 25%;
    flex: 1 0 25%;
  }
}

@media (min-width:1280px) {
  .c0 {
    -webkit-flex: 1 0 20%;
    -ms-flex: 1 0 20%;
    flex: 1 0 20%;
  }
}

@media (min-width:1024px) {
  .c2 {
    width: calc(100% - 2rem);
  }
}

@media (min-width:1024px) {
  .c2 {
    width: 100%;
  }
}

@media (min-width:1280px) {
  .c2 {
    width: calc(100% - 2rem);
  }
}

@media (min-width:1024px) {
  .c5 {
    width: 100%;
  }
}

@media (min-width:1024px) {
  .c5 {
    width: 100%;
  }
}

@media (min-width:1280px) {
  .c5 {
    width: 100%;
  }
}

<div
    class="MuiBox-root MuiBox-root-3 c0"
  >
    <div
      class="c1"
      data-testid="plp-facets"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <h2
            class="MuiTypography-root c4 MuiTypography-h3"
            data-testid="plp-total-products"
            role="status"
          >
            9999 Products
          </h2>
        </div>
      </div>
      <div
        class="c5"
        data-testid="plp-facet-items"
      >
        <div>
          TEST FACETS FEATS
        </div>
        <div>
          TEST FACETS FILTERS
        </div>
        <div>
          TEST FACETS FILTERS
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Facets:  When no filters are supplied, it should match the snapshot  1`] = `
<DocumentFragment>
  .c0 {
  min-width: 0;
  position: relative;
  display: none;
}

.c1 {
  z-index: 1;
  margin-left: 1rem;
  width: calc(100% - 2rem);
  height: 100%;
}

.c2 {
  background: #ffffff;
  border-bottom: 0.0625rem solid #d1d1d1;
  min-height: 3.75rem;
  margin-bottom: 0.75rem;
  max-width: 13.400625rem;
  padding-top: 1.175rem;
  padding-bottom: 1rem;
  -webkit-transform: translateY(-0.75rem);
  -ms-transform: translateY(-0.75rem);
  transform: translateY(-0.75rem);
  z-index: 1;
  margin-top: 10px;
  position: absolute;
  width: 100%;
}

.c6 {
  background: #ffffff;
  max-width: 13.400625rem;
  visibility: unset;
  padding-top: 20px;
  position: relative;
  width: 100%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
}

.c4 {
  white-space: nowrap;
}

.c5 {
  color: #257f39;
  background: none;
  border: none;
  padding: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: "AzoSansMedium","Helvetica Neue",Arial,sans-serif;
  line-height: 1.2;
  -webkit-letter-spacing: 0.008rem;
  -moz-letter-spacing: 0.008rem;
  -ms-letter-spacing: 0.008rem;
  letter-spacing: 0.008rem;
  cursor: pointer;
  margin-left: 1rem;
  text-align: right;
  margin-top: 0.25rem;
}

[dir="rtl"] .c5 {
  margin-left: 0;
  margin-right: 1rem;
  text-align: left;
}

.c5:hover {
  background: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

@media (min-width:1024px) {
  .c0 {
    display: inherit;
    -webkit-flex: 1 0 25%;
    -ms-flex: 1 0 25%;
    flex: 1 0 25%;
  }
}

@media (min-width:1024px) {
  .c0 {
    -webkit-flex: 1 0 25%;
    -ms-flex: 1 0 25%;
    flex: 1 0 25%;
  }
}

@media (min-width:1280px) {
  .c0 {
    -webkit-flex: 1 0 20%;
    -ms-flex: 1 0 20%;
    flex: 1 0 20%;
  }
}

@media (min-width:1024px) {
  .c2 {
    width: calc(100% - 2rem);
  }
}

@media (min-width:1024px) {
  .c2 {
    width: 100%;
  }
}

@media (min-width:1280px) {
  .c2 {
    width: calc(100% - 2rem);
  }
}

@media (min-width:1024px) {
  .c6 {
    width: 100%;
  }
}

@media (min-width:1024px) {
  .c6 {
    width: 100%;
  }
}

@media (min-width:1280px) {
  .c6 {
    width: 100%;
  }
}

<div
    class="MuiBox-root MuiBox-root-2 c0"
  >
    <div
      class="c1"
      data-testid="plp-facets"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <h2
            class="MuiTypography-root c4 MuiTypography-h3"
            data-testid="plp-total-products"
            role="status"
          >
            9999 Products
          </h2>
          <button
            aria-label="Clear All"
            class="c5"
            data-testid="plp-filter-clear-all-link"
          >
            Clear All
          </button>
        </div>
      </div>
      <div
        class="c6"
        data-testid="plp-facet-items"
      />
    </div>
  </div>
</DocumentFragment>
`;
